--- a/css.html
+++ b/css.html
@@ -1,5 +1,5 @@
 <style>
-    /* Version: 1.3.0 */
+    /* Version: 1.6.06 */
     :root {
         --md-sys-color-primary: #32CD32;
         --md-sys-color-on-primary: #000000;
@@ -36,7 +36,7 @@
     /* App Bar */
     .md3-top-app-bar {
         background-color: var(--md-sys-color-primary);
-        color: var(--md-sys-color-on-primary);
+        color: var(--md-sys-color-on-primary) !important;
         padding: 0 16px;
         height: 64px;
         display: flex;
@@ -63,12 +63,14 @@
         line-height: 28px;
         font-weight: 400;
         margin: 0;
+        color: inherit !important;
     }
 
     .md3-title-large {
         font-size: 22px;
         font-weight: 400;
         margin: 0;
+        color: inherit !important;
     }
 
     .md3-container {
@@ -133,6 +135,47 @@
         font-weight: 500;
     }
 
+    .md3-select {
+        width: 100%;
+        padding: 16px;
+        padding-right: 48px;
+        border-radius: 12px;
+        border: 1px solid #ddd;
+        background: #fdfdfd;
+        font-family: inherit;
+        font-size: 16px;
+        appearance: none;
+        background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='gray'%3e%3cpath d='M7 10l5 5 5-5z'/%3e%3c/svg%3e");
+        background-repeat: no-repeat;
+        background-position: right 16px center;
+        background-size: 24px;
+        cursor: pointer;
+        transition: border-color 0.2s;
+    }
+
+    .md3-select:focus {
+        outline: none;
+        border-color: var(--md-sys-color-primary);
+        box-shadow: 0 0 0 2px rgba(var(--md-sys-color-primary-rgb, 0, 0, 0), 0.1);
+    }
+
+    .primary-btn {
+        background-color: var(--md-sys-color-primary);
+        color: var(--md-sys-color-on-primary);
+        font-weight: 600;
+        padding: 12px 24px;
+        border-radius: 28px;
+        border: none;
+        cursor: pointer;
+        width: 100%;
+        margin-top: 16px;
+        transition: opacity 0.2s;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 8px;
+    }
+
     .md3-btn-filled {
         background-color: var(--md-sys-color-primary);
         color: var(--md-sys-color-on-primary);
@@ -164,6 +207,38 @@
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         transform: translateY(1px);
         /* Press down effect */
+    }
+
+    /* MD3 Outlined Button */
+    .md3-btn-outlined {
+        background-color: transparent;
+        color: var(--md-sys-color-primary);
+        border: 1px solid var(--md-sys-color-outline);
+        border-radius: 100px;
+        padding: 0 24px;
+        height: 48px;
+        font-size: 14px;
+        font-weight: 500;
+        cursor: pointer;
+        font-family: var(--md-ref-typeface-brand);
+        transition: background-color 0.2s, border-color 0.2s, color 0.2s, transform 0.2s, box-shadow 0.2s;
+    }
+
+    .md3-btn-outlined:hover,
+    .md3-btn-outlined:focus {
+        background-color: var(--md-sys-color-primary);
+        color: var(--md-sys-color-on-primary);
+        border-color: var(--md-sys-color-primary);
+        box-shadow: 0 8px 12px rgba(0, 0, 0, 0.25);
+        transform: translateY(-2px);
+        outline: none;
+    }
+
+    .md3-btn-outlined:active {
+        background-color: var(--md-sys-color-primary);
+        color: var(--md-sys-color-on-primary);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+        transform: translateY(1px);
     }
 
     .state-view {
@@ -213,19 +288,39 @@
     /* CATEGORY & PRODUCT LIST STYLES */
 
     /* Details/Summary */
-    .category-details,
-    .product-group-details {
-        margin-bottom: 8px;
+    .category-details {
+        margin-bottom: 16px;
     }
 
     .category-details>summary {
         list-style: none;
-        margin: 24px 0 12px 0;
-        padding: 8px;
+        margin: 12px 0;
+        padding: 16px 20px;
         font-size: 20px;
-        font-weight: 500;
+        font-weight: 700 !important;
         cursor: pointer;
-        border-bottom: 2px solid var(--md-sys-color-outline-variant);
+        background-color: #f0f0f3;
+        border: 1px solid var(--md-sys-color-outline-variant);
+        border-radius: 12px;
+        transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+        color: #1d1b20 !important;
+        /* Force readable dark text */
+    }
+
+    .category-details>summary:hover {
+        background-color: #e8e8eb;
+        box-shadow: 0 8px 24px rgba(0, 0, 0, 0.12);
+        transform: translateY(-3px) scale(1.01);
+    }
+
+    .category-details[open]>summary {
+        transform: none;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    .product-group-details {
+        margin-bottom: 8px;
     }
 
     /* SALES & DETAILS STYLES */
@@ -249,9 +344,9 @@
     }
 
     .sale-price-highlight {
-        color: #D32F2F;
-        /* Red for emphasis */
-        font-weight: 700;
+        color: inherit;
+        font-weight: 900;
+        /* Maximum bold for contrast */
     }
 
     /* Info Icon */
@@ -381,8 +476,8 @@
 
         /* STICKY WATERFALL HEADER RESTORED */
         position: sticky;
-        top: 64px;
-        /* Below App Bar */
+        top: 112px;
+        /* App Bar (64) + Category (~48) */
         z-index: 20;
         /* Higher than content */
     }
@@ -390,6 +485,16 @@
     /* Category Header Lift */
     .category-details>summary {
         transition: transform 0.2s ease, box-shadow 0.2s ease;
+        position: sticky;
+        top: 64px;
+        z-index: 25;
+    }
+
+    .category-details[open]>summary {
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2) !important;
+        position: sticky;
+        top: 64px;
+        z-index: 30;
     }
 
     .category-details>summary:hover {
@@ -437,15 +542,18 @@
 
     .header-expanded-content .col-data {
         /* Ensure header cols use same flex props as body cols */
-        flex: 1;
+        flex: 0.8;
+        max-width: 80px;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        min-width: 65px;
+        min-width: 60px;
         text-align: center;
-        font-size: 13px;
-        font-weight: 500;
+        font-size: 11px;
+        /* Smaller, more refined */
+        font-weight: 600;
+        /* Slightly bolder for headers */
         line-height: 1.2;
     }
 
@@ -488,20 +596,22 @@
 
 
     .col-name {
-        flex: 1.5;
-        /* Takes more space */
-        min-width: 100px;
+        flex: 2;
+        /* Takes more space - increased from 1.5 */
+        min-width: 120px;
         font-weight: 500;
         text-align: left;
         white-space: normal;
-        padding-right: 8px;
+        padding-right: 12px;
     }
 
     .col-data {
-        flex: 1;
-        /* Parametric - grows to fill space */
-        min-width: 65px;
-        /* Minimum for input */
+        flex: 0.8;
+        /* Reduced from 1 - makes columns more compact */
+        min-width: 60px;
+        /* Reduced from 65px */
+        max-width: 80px;
+        /* Add max width to prevent spreading */
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -510,18 +620,26 @@
 
     .table-input {
         width: 100%;
-        /* Fill column width (max 60ish) */
-        max-width: 60px;
-        height: 36px;
+        /* Fill column width */
+        max-width: 55px;
+        /* Reduced from 60px */
+        height: 34px;
+        /* Slightly smaller from 36px */
         text-align: center;
         border: 1px solid var(--md-sys-color-outline);
         border-radius: 4px;
-        font-size: 16px;
+        font-size: 14px;
+        /* Reduced from 16px for more refinement */
+        font-weight: 400;
+        /* Normal weight instead of bold */
     }
 
     .price-sub {
-        font-size: 0.8em;
+        font-size: 0.75em;
+        /* Slightly smaller */
         color: var(--md-sys-color-secondary);
+        font-weight: 400;
+        /* Normal weight */
     }
 
     /* Fixed FAB (Collapse Button) */
@@ -532,8 +650,8 @@
         width: 56px;
         height: 56px;
         border-radius: 16px;
-        background-color: var(--md-sys-color-primary-container);
-        color: var(--md-sys-color-on-primary-container);
+        background-color: var(--md-sys-color-secondary);
+        color: var(--md-sys-color-on-secondary);
         border: none;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         cursor: pointer;
@@ -553,19 +671,28 @@
         overflow-x: auto;
     }
 
+    .matrix-grid-row {
+        display: flex !important;
+        flex-direction: row !important;
+        flex-wrap: nowrap !important;
+        justify-content: flex-start !important;
+        align-items: stretch !important;
+        width: max-content !important;
+        min-width: 100% !important;
+    }
+
     .matrix-header-row {
-        display: flex;
-        position: sticky;
-        top: 0;
-        background-color: var(--md-sys-color-surface-variant);
-        z-index: 5;
-        font-weight: bold;
-        padding: 8px 16px;
+        position: sticky !important;
+        top: 0 !important;
+        z-index: 10 !important;
+        height: 48px;
     }
 
     .matrix-name-col {
-        width: 150px;
-        flex: none;
+        width: 160px !important;
+        min-width: 160px !important;
+        flex: 0 0 160px !important;
+        box-sizing: border-box;
     }
 
     /* ANIMATION WRAPPER */
@@ -573,5 +700,187 @@
     .details-animation-wrapper {
         overflow: hidden;
         transition: height 0.35s ease-out;
+    }
+
+    /* --- TABS --- */
+    .md3-tabs {
+        display: flex;
+        background-color: var(--md-sys-color-primary);
+        padding: 0 16px;
+        gap: 8px;
+    }
+
+    .md3-tab {
+        flex: 1;
+        background: none;
+        border: none;
+        color: var(--md-sys-color-on-primary);
+        padding: 12px 16px;
+        font-family: inherit;
+        font-weight: 500;
+        font-size: 14px;
+        cursor: pointer;
+        opacity: 0.7;
+        transition: all 0.2s ease;
+        border-bottom: 3px solid transparent;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 8px;
+    }
+
+    .md3-tab.active {
+        opacity: 1;
+        border-bottom-color: var(--md-sys-color-on-primary);
+    }
+
+    .md3-tab:hover {
+        background-color: rgba(255, 255, 255, 0.1);
+    }
+
+    /* --- HISTORY LIST --- */
+    #history-view {
+        padding: 24px;
+    }
+
+    .history-list {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        max-width: 800px;
+        margin: 0 auto;
+        padding-bottom: 80px;
+    }
+
+    .history-card {
+        background: #fff;
+        border-radius: 12px;
+        padding: 16px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border: 1px solid #eee;
+        transition: transform 0.2s ease;
+    }
+
+    .history-card:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .history-info {
+        text-align: left;
+    }
+
+    .history-date {
+        font-weight: bold;
+        color: #333;
+        font-size: 16px;
+    }
+
+    .history-meta {
+        font-size: 13px;
+        color: #666;
+        margin-top: 4px;
+    }
+
+    .history-actions {
+        display: flex;
+        gap: 12px;
+    }
+
+    .history-btn {
+        padding: 8px 16px;
+        border-radius: 20px;
+        border: 1px solid var(--md-sys-color-primary);
+        background: none;
+        color: var(--md-sys-color-primary);
+        font-weight: 500;
+        cursor: pointer;
+        font-size: 13px;
+        transition: all 0.2s ease;
+    }
+
+    .history-btn:hover {
+        background-color: var(--md-sys-color-primary);
+        color: var(--md-sys-color-on-primary);
+    }
+
+    /* Modal Overlay */
+    .modal-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 2000;
+        padding: 20px;
+        box-sizing: border-box;
+    }
+
+    .modal-content {
+        background: white;
+        border-radius: 16px;
+        padding: 24px;
+        max-width: 400px;
+        width: 100%;
+        box-shadow: var(--md-sys-elevation-3);
+        animation: modalSlideIn 0.2s ease-out;
+    }
+
+    @keyframes modalSlideIn {
+        from {
+            transform: translateY(-20px);
+            opacity: 0;
+        }
+
+        to {
+            transform: translateY(0);
+            opacity: 1;
+        }
+    }
+
+    /* Readonly input styling */
+    input[readonly] {
+        background-color: #f5f5f5;
+        cursor: default;
+    }
+
+    /* MD3 Snackbar Toast */
+    .md3-snackbar {
+        position: fixed;
+        bottom: 24px;
+        left: 50%;
+        transform: translateX(-50%) translateY(100px);
+        background-color: #323232;
+        color: white;
+        padding: 14px 24px;
+        border-radius: 8px;
+        font-size: 14px;
+        font-family: var(--md-ref-typeface-brand);
+        box-shadow: 0 6px 10px rgba(0, 0, 0, 0.14), 0 1px 18px rgba(0, 0, 0, 0.12), 0 3px 5px rgba(0, 0, 0, 0.2);
+        z-index: 3000;
+        opacity: 0;
+        transition: transform 0.3s ease-out, opacity 0.3s ease-out;
+        max-width: 90%;
+        text-align: center;
+    }
+
+    .md3-snackbar.show {
+        transform: translateX(-50%) translateY(0);
+        opacity: 1;
+    }
+
+    .md3-snackbar.success {
+        background-color: #2e7d32;
+    }
+
+    .md3-snackbar.error {
+        background-color: #c62828;
     }
 </style>
