--- a/admin_form.html
+++ b/admin_form.html
@@ -1,6 +1,6 @@
 <!-- modular_admin_form.html -->
 <div id="admin-container">
-    <h3>Admin Dashboard <span class="version-tag">Bulk Generator v1.2</span> ✨</h3>
+    <h3>Admin Dashboard</h3>
 
     <!-- Mode Switch -->
     <div style="margin-bottom: 20px; display: flex; gap: 8px; flex-wrap: wrap;">
@@ -77,7 +77,7 @@
             </div>
 
             <div style="display:grid; grid-template-columns:1fr 1fr; gap:12px;">
-                <div class="md3-input-wrapper">
+                <div class="md3-input-wrapper" style="display:none;">
                     <label id="lbl_ref">Reference Character</label>
                     <input type="text" id="baseRef" placeholder=" " required>
                 </div>
@@ -90,11 +90,11 @@
             <div style="display:grid; grid-template-columns:1fr 1fr; gap:12px;">
                 <div class="md3-input-wrapper">
                     <label id="lbl_commissionRate">Normal Commission ($)</label>
-                    <input type="number" id="commissionRate" placeholder=" " step="0.01">
+                    <input type="number" id="commissionRate" value="1.5" placeholder=" " step="0.01">
                 </div>
                 <div class="md3-input-wrapper">
                     <label id="lbl_saleCommission">Sale Commission ($)</label>
-                    <input type="number" id="saleCommission" placeholder=" " step="0.01">
+                    <input type="number" id="saleCommission" value="1.0" placeholder=" " step="0.01">
                 </div>
             </div>
 
@@ -103,14 +103,18 @@
                 <textarea id="description" rows="2" placeholder=" "></textarea>
             </div>
 
-            <div style="display:grid; grid-template-columns:1fr 1fr; gap:12px;">
+            <div style="display:grid; grid-template-columns:1fr 1fr 1fr; gap:12px;">
                 <div class="md3-input-wrapper">
                     <label id="lbl_image">Image URL (Optional)</label>
                     <input type="text" id="imageUrl" placeholder=" ">
                 </div>
                 <div class="md3-input-wrapper">
-                    <label id="lbl_backgroundColor">Color (Hex/Name)</label>
+                    <label id="lbl_backgroundColor">Colour (Hex/Name)</label>
                     <input type="text" id="baseColor" placeholder=" ">
+                </div>
+                <div class="md3-input-wrapper">
+                    <label id="lbl_textColor">Text Colour</label>
+                    <input type="text" id="baseTextColor" placeholder="Auto">
                 </div>
             </div>
         </div>
@@ -135,10 +139,8 @@
             </div>
         </div>
 
-        <!-- Hidden variation name fields (auto-populated from group selections) -->
+        <!-- Hidden variation name fields for Format/Units (always fixed) -->
         <div id="varTypeContainer" style="display:none;">
-            <input type="hidden" id="var1Name">
-            <input type="hidden" id="var2Name">
             <input type="hidden" id="var3Name" value="Format">
             <input type="hidden" id="var4Name" value="Units">
         </div>
@@ -153,10 +155,33 @@
                 Generation Settings
             </h4>
             <p style="font-size:12px; color: var(--md-sys-color-on-surface-variant); margin:0 0 16px 0;">
-                Configure pricing and formats, then generate combinations.
+                Define variation names and values, configure pricing and formats, then generate combinations.
             </p>
 
-            <!-- Hidden textareas — auto-populated from selected group checkboxes -->
+            <!-- Variation 1 & 2 Definitions -->
+            <div style="display:grid; grid-template-columns:1fr 1fr; gap:16px; margin-bottom:16px;">
+                <!-- Variation Slot 1 -->
+                <div>
+                    <div class="md3-input-wrapper compact-input" style="margin-bottom:8px;">
+                        <label>Variation 1 Name</label>
+                        <select id="var1Name" onchange="onVarNameSelect(1)">
+                            <option value="">-- Select Group --</option>
+                        </select>
+                    </div>
+                    <div id="varSlot1Checks" style="display:flex; flex-wrap:wrap; gap:6px;"></div>
+                </div>
+                <!-- Variation Slot 2 -->
+                <div>
+                    <div class="md3-input-wrapper compact-input" style="margin-bottom:8px;">
+                        <label>Variation 2 Name</label>
+                        <select id="var2Name" onchange="onVarNameSelect(2)">
+                            <option value="">-- Select Group --</option>
+                        </select>
+                    </div>
+                    <div id="varSlot2Checks" style="display:flex; flex-wrap:wrap; gap:6px;"></div>
+                </div>
+            </div>
+            <!-- Hidden textareas — populated from checked values before generate -->
             <textarea id="bulkVar1List" style="display:none;"></textarea>
             <textarea id="bulkVar2List" style="display:none;"></textarea>
 
