--- a/admin_logic.html
+++ b/admin_logic.html
@@ -62,7 +62,7 @@
         // Fetch Variation Groups from SETTINGS
         google.script.run.withSuccessHandler(groups => {
             variationGroups = groups || [];
-            renderVariationGroups();
+            populateVarNameDropdowns();
         }).getVariationGroups();
 
         // Auto-derive Reference Character from SKU (strip spaces and hyphens)
@@ -115,6 +115,8 @@
         }
 
         const baseSku = document.getElementById('baseSku').value.trim();
+        const baseImage = document.getElementById('imageUrl').value.trim();
+        const baseDesc = document.getElementById('description').value.trim(); // Get base description
         let skuCounter = 1;
 
         // Helper to add row
@@ -134,6 +136,9 @@
                 variation4: v4,
                 price: price,
                 unitsPerCase: units,
+                image: baseImage,
+                description: baseDesc,
+                inventory: "instock", // Default for generated rows
                 sku: sku
             });
         };
@@ -178,21 +183,18 @@
         deleteSection.style.display = 'none';
         bulkSection.style.display = 'none';
         addCustomerSection.style.display = 'none';
-        document.getElementById('varGroupSection').style.display = 'none';
         baseNameInput.readOnly = false;
         baseNameInput.style.backgroundColor = "white";
 
         if (mode === 'new') {
             list.innerHTML = "";
             addVariationRow();
-            document.getElementById('varGroupSection').style.display = variationGroups.length > 0 ? 'block' : 'none';
-            bulkSection.style.display = variationGroups.length > 0 ? 'block' : 'none';
+            bulkSection.style.display = 'block';
             submitBtn.textContent = "Submit Products";
         }
         else if (mode === 'bulk') {
             list.innerHTML = "";
             bulkSection.style.display = 'block';
-            document.getElementById('varGroupSection').style.display = variationGroups.length > 0 ? 'block' : 'none';
             submitBtn.textContent = "Submit Bulk Products";
         }
         else if (mode === 'existing') {
@@ -262,11 +264,27 @@
                     <input type="number" class="v4" value="${data.unitsPerCase || data.variation4 || 1}" placeholder="1">
                 </div>
                 <div class="md3-input-wrapper compact-input price-wrapper">
-                    <label>Price</label>
+                    <label>Price ($)</label>
                     <input type="number" class="price" value="${data.price || ''}" step="0.01" placeholder="0.00">
                 </div>
                 <div class="md3-input-wrapper compact-input">
-                    <label>SKU (Auto-Generated if empty)</label>
+                    <label>Sale Price ($)</label>
+                    <input type="number" class="salePrice" value="${data.salePrice || ''}" step="0.01" placeholder="0.00">
+                </div>
+                <div class="md3-input-wrapper compact-input">
+                    <label>Image URL</label>
+                    <input type="text" class="variationImage" value="${data.image || ''}" placeholder="Individual URL">
+                </div>
+                <div class="md3-input-wrapper compact-input">
+                    <label>Description</label>
+                    <input type="text" class="variationDescription" value="${data.description || ''}" placeholder="Individual Description">
+                </div>
+                <div class="md3-input-wrapper compact-input">
+                    <label>Inventory</label>
+                    <input type="text" class="inventory" value="${data.inventory || 'instock'}" placeholder="e.g. instock">
+                </div>
+                <div class="md3-input-wrapper compact-input">
+                    <label>SKU (Auto if empty)</label>
                     <input type="text" class="sku" value="${data.sku || ''}" placeholder="LEAVE EMPTY TO AUTO-GEN">
                 </div>
             </div>
@@ -322,12 +340,18 @@
         }
 
         const payload = [];
+        const commissionRate = document.getElementById('commissionRate') ? document.getElementById('commissionRate').value : '';
+
         rows.forEach(row => {
             const v1 = row.querySelector('.v1').value;
             const v2 = row.querySelector('.v2').value;
             const v3 = row.querySelector('.v3').value; // Format
             const v4 = row.querySelector('.v4').value; // Units
             const price = row.querySelector('.price').value;
+            const salePrice = row.querySelector('.salePrice') ? row.querySelector('.salePrice').value : '';
+            const rowImage = row.querySelector('.variationImage').value;
+            const rowDesc = row.querySelector('.variationDescription').value;
+            const rowInventory = row.querySelector('.inventory').value.trim() || 'instock'; // New Field
             const skuOverride = row.querySelector('.sku').value;
 
             // Construct SKU if empty
@@ -345,15 +369,19 @@
                     var3Name: document.getElementById('var3Name').value,
                     var4Name: document.getElementById('var4Name').value,
                     backgroundColor: document.getElementById('baseColor').value, // Color Name/Hex
-                    description: document.getElementById('description').value,
-                    image: document.getElementById('imageUrl').value,
+                    textColor: document.getElementById('baseTextColor').value, // Text Colour (blank = auto)
+                    description: rowDesc || document.getElementById('description').value, // Row description takes priority
+                    image: rowImage || document.getElementById('imageUrl').value, // Row image takes priority, then fallback to base
 
                     variation: v1,
                     variation2: v2,
                     variation3: v3,
                     variation4: v4,
                     price: price,
+                    salePrice: salePrice,
+                    commissionRate: commissionRate,
                     unitsPerCase: (v3 === 'Single') ? 1 : v4,
+                    inventory: rowInventory,
                     sku: skuOverride
                 });
             }
@@ -557,128 +585,146 @@
     }
 
     /**
-     * Render Variation Group cards with individual value checkboxes
+     * Populate the Variation 1/2 Name dropdowns from loaded groups
      */
-    function renderVariationGroups() {
-        const container = document.getElementById('varGroupList');
-        if (!container) return;
-        container.innerHTML = '';
+    function populateVarNameDropdowns() {
+        [1, 2].forEach(slot => {
+            const select = document.getElementById('var' + slot + 'Name');
+            if (!select) return;
+            // Keep the first option, clear the rest
+            select.length = 1;
 
-        if (variationGroups.length === 0) {
-            container.innerHTML = '<p style="color: var(--md-sys-color-on-surface-variant); font-size:13px;">No variation groups found in SETTINGS.</p>';
-            return;
-        }
-
-        variationGroups.forEach((group, gIdx) => {
-            const card = document.createElement('div');
-            card.style.cssText = 'background: var(--md-sys-color-surface-variant); border-radius:12px; padding:16px; transition: box-shadow 0.2s;';
-
-            // Group header with Select All toggle
-            let html = `
-                <div style="display:flex; align-items:center; justify-content:space-between; margin-bottom:12px;">
-                    <div>
-                        <strong style="font-size:14px; color: var(--md-sys-color-on-surface);">${group.groupName}</strong>
-                        <span style="font-size:11px; color: var(--md-sys-color-primary); margin-left:8px; font-weight:500; background: var(--md-sys-color-primary-container); padding:2px 8px; border-radius:12px;">
-                            Var ${group.variationNumber}
-                        </span>
-                    </div>
-                    <label class="md3-checkbox-wrapper" style="display:flex; align-items:center; gap:6px; cursor:pointer; font-size:12px; color: var(--md-sys-color-on-surface-variant);">
-                        <input type="checkbox" id="varGroupAll_${gIdx}" onchange="toggleAllGroupValues(${gIdx})" style="display:none;">
-                        <span class="md3-checkbox-visual" style="transform:scale(0.85);">
-                            <span class="material-symbols-outlined icon">check</span>
-                        </span>
-                        Select All
-                    </label>
-                </div>
-            `;
-
-            // Individual value checkboxes in responsive grid
-            html += '<div style="display:flex; flex-wrap:wrap; gap:8px; margin-bottom:12px;">';
-            group.values.forEach((val, vIdx) => {
-                html += `
-                    <label class="md3-checkbox-wrapper" style="display:flex; align-items:center; gap:6px; cursor:pointer; padding:6px 12px; background: var(--md-sys-color-surface); border-radius:8px; box-shadow: 0 1px 2px rgba(0,0,0,0.08); transition: background 0.15s;">
-                        <input type="checkbox" class="varVal_${gIdx}" data-group="${gIdx}" data-value="${val}" style="display:none;">
-                        <span class="md3-checkbox-visual" style="transform:scale(0.8);">
-                            <span class="material-symbols-outlined icon">check</span>
-                        </span>
-                        <span style="font-size:13px; color: var(--md-sys-color-on-surface);">${val}</span>
-                    </label>
-                `;
+            // Filter by variation number (or include if varNum is missing/1 for Slot 1)
+            const filtered = variationGroups.filter(group => {
+                const varNum = group.variationNumber || 1;
+                return varNum === slot;
             });
-            html += '</div>';
 
-            // "Other" input
-            html += `
-                <div class="md3-input-wrapper compact-input" style="margin-bottom:0;">
-                    <label style="font-size:11px;">+ Other (auto-saves to group)</label>
-                    <input type="text" id="varGroupOther_${gIdx}" placeholder=" ">
-                </div>
-            `;
+            filtered.forEach(group => {
+                const opt = document.createElement('option');
+                opt.value = group.groupName;
+                opt.textContent = group.groupName;
+                select.appendChild(opt);
+            });
 
-            card.innerHTML = html;
-            container.appendChild(card);
+            // Add "Other" option
+            const otherOpt = document.createElement('option');
+            otherOpt.value = 'OTHER_GROUP';
+            otherOpt.textContent = '+ Other (New Group)';
+            select.appendChild(otherOpt);
         });
     }
 
     /**
-     * Toggle all checkboxes in a variation group
+     * When a variation group is selected from the dropdown,
+     * render individual value checkboxes + Select All + Other input
      */
-    function toggleAllGroupValues(gIdx) {
-        const selectAll = document.getElementById('varGroupAll_' + gIdx);
-        const checkboxes = document.querySelectorAll('.varVal_' + gIdx);
+    function onVarNameSelect(slot) {
+        const select = document.getElementById('var' + slot + 'Name');
+        const container = document.getElementById('varSlot' + slot + 'Checks');
+        if (!container) return;
+        container.innerHTML = '';
+
+        const groupName = select.value;
+        if (!groupName) return;
+
+        if (groupName === 'OTHER_GROUP') {
+            // New Group UI
+            container.innerHTML = `
+                <div style="width:100%; border:1px dashed #ccc; padding:12px; border-radius:8px; background: rgba(0,0,0,0.02);">
+                    <div class="md3-input-wrapper compact-input">
+                        <label>New Group Name (e.g. Strength)</label>
+                        <input type="text" id="newGroupNameSlot_${slot}" placeholder=" ">
+                    </div>
+                    <div class="md3-input-wrapper compact-input" style="margin-bottom:0;">
+                        <label>Initial Values (one per line)</label>
+                        <textarea id="newGroupValuesSlot_${slot}" rows="3" placeholder="50mg\n100mg\n200mg" style="font-size:12px;"></textarea>
+                    </div>
+                    <p style="font-size:10px; color:#666; margin-top:8px;">* This new group will be saved to your Variations Table.</p>
+                </div>
+            `;
+            return;
+        }
+
+        // Find the group
+        const group = variationGroups.find(g => g.groupName === groupName);
+        if (!group) return;
+
+        // Render Textarea for values instead of checkboxes
+        const existingValuesString = group.values.join('\n');
+
+        container.innerHTML = `
+            <div class="md3-input-wrapper" style="width:100%;">
+                <label style="font-size:11px; color: var(--md-sys-color-primary);">VARIATION VALUES (ONE PER LINE)</label>
+                <textarea id="slotTextarea_${slot}" rows="5" placeholder="Enter values..." style="font-size:13px;">${existingValuesString}</textarea>
+                <p style="font-size:10px; color: var(--md-sys-color-on-surface-variant); margin-top:4px;">
+                    * Values entered here will be used for generation but won't bloat your spreadsheet.
+                </p>
+            </div>
+        `;
+    }
+
+    /**
+     * Toggle all checkboxes in a variation slot
+     */
+    function toggleSlotAll(slot) {
+        const selectAll = document.getElementById('slotAll_' + slot);
+        const checkboxes = document.querySelectorAll('.slotVal_' + slot);
         checkboxes.forEach(cb => cb.checked = selectAll.checked);
     }
 
     /**
-     * Collect selected variation values from group checkboxes,
-     * populate hidden textareas and variation name fields.
+     * Collect checked variation values from slot checkboxes,
+     * populate hidden textareas. Handle "Other" auto-save.
      * Called automatically before generateBulkRows().
      */
     function applySelectedVarGroups() {
-        // Clear textareas first
-        const ta1 = document.getElementById('bulkVar1List');
-        const ta2 = document.getElementById('bulkVar2List');
-        if (ta1) ta1.value = '';
-        if (ta2) ta2.value = '';
+        [1, 2].forEach(slot => {
+            const textarea = document.getElementById('bulkVar' + slot + 'List');
+            if (textarea) textarea.value = '';
 
-        variationGroups.forEach((group, gIdx) => {
-            const varNum = group.variationNumber;
-            const checkedValues = [];
+            const select = document.getElementById('var' + slot + 'Name');
+            let groupName = select ? select.value : '';
+            if (!groupName) return;
 
-            // Collect checked individual values
-            const checkboxes = document.querySelectorAll('.varVal_' + gIdx);
-            checkboxes.forEach(cb => {
-                if (cb.checked) checkedValues.push(cb.dataset.value);
-            });
+            const checked = [];
 
-            // Check for "Other" custom value
-            const otherInput = document.getElementById('varGroupOther_' + gIdx);
-            const otherVal = otherInput ? otherInput.value.trim() : '';
-            if (otherVal) {
-                checkedValues.push(otherVal);
+            // Case A: User selected "Other" as a group name (creating new group)
+            if (groupName === 'OTHER_GROUP') {
+                const newName = document.getElementById('newGroupNameSlot_' + slot).value.trim();
+                const newValuesRaw = document.getElementById('newGroupValuesSlot_' + slot).value.trim();
+                if (newName) {
+                    // Support both command and newline separated for the new group creation
+                    const valueList = newValuesRaw.split(/[\n,]/).map(v => v.trim()).filter(v => v);
+                    checked.push(...valueList);
 
-                // Save new value back to the group in SETTINGS
-                google.script.run
-                    .withSuccessHandler(() => {
-                        console.log('Saved "' + otherVal + '" to group "' + group.groupName + '"');
-                        variationGroups[gIdx].values.push(otherVal);
-                        renderVariationGroups();
-                    })
-                    .withFailureHandler(err => console.warn('Failed to save Other value:', err))
-                    .addValueToVariationGroup(group.groupName, otherVal);
+                    // Call backend to create this group persistently (comma separated for sheet)
+                    google.script.run
+                        .withSuccessHandler(res => {
+                            console.log('Successfully created persistent group:', res.groupName);
+                            variationGroups.push({
+                                groupName: newName,
+                                variationNumber: slot,
+                                values: valueList
+                            });
+                        })
+                        .withFailureHandler(err => console.error('Failed to create variation group:', err))
+                        .createNewVariationGroup(slot, newName, valueList.join(', '));
+                }
+            }
+            // Case B: User selected an existing group
+            else {
+                const textareaSlot = document.getElementById('slotTextarea_' + slot);
+                if (textareaSlot) {
+                    // Use newlines as primary separator as requested
+                    const values = textareaSlot.value.split('\n').map(v => v.trim()).filter(v => v);
+                    checked.push(...values);
+                }
             }
 
-            if (checkedValues.length === 0) return;
-
-            // Set variation name field
-            const nameField = document.getElementById('var' + varNum + 'Name');
-            if (nameField) nameField.value = group.groupName;
-
-            // Populate the hidden textarea
-            const textarea = document.getElementById('bulkVar' + varNum + 'List');
-            if (textarea) {
-                const existing = textarea.value.trim();
-                textarea.value = existing ? existing + '\n' + checkedValues.join('\n') : checkedValues.join('\n');
+            // Populate hidden textarea (used by generation logic)
+            if (textarea && checked.length > 0) {
+                textarea.value = checked.join('\n');
             }
         });
     }
