--- a/css.html
+++ b/css.html
@@ -120,7 +120,7 @@
         top: 16px;
         /* Centered initially (approx) */
         font-size: 16px;
-        color: var(--md-sys-color-secondary);
+        color: var(--md-sys-color-primary);
         font-weight: 400;
         pointer-events: none;
         transition: 0.2s ease all;
@@ -637,7 +637,7 @@
     .price-sub {
         font-size: 0.75em;
         /* Slightly smaller */
-        color: var(--md-sys-color-secondary);
+        color: var(--md-sys-color-primary);
         font-weight: 400;
         /* Normal weight */
     }
