fix(admin): mobile responsive layout, MD3 tokens, fix client type dropdown
- admin_css: full mobile responsive @media breakpoints (600px, 400px)
  - tabs grid layout on mobile (3-col → 2-col on very small screens)
  - 16px minimum font on all inputs (prevents iOS auto-zoom, per DESIGN_SYSTEM.md)
  - collapsed multi-column grids to single column on narrow screens
  - MD3 token variables replace hardcoded hex throughout (outline, surface, primary, secondary-container)
  - focus ring now uses box-shadow + border per MD3 state layer spec
  - mode-btn tabs flex: 1 1 auto to fill row evenly
- admin_form: mode switch row uses align-items: stretch for even tab heights
- admin_logic: fix loadClientTypes() dropdown never populating
  - replaced buggy options.length guard with proper boolean flag
  - added loading/disabled state while fetching
  - fallback defaults if CLIENT_TYPES Named Range is empty/missing

--- a/admin_form.html
+++ b/admin_form.html
@@ -3,7 +3,7 @@
     <h3>Admin Dashboard</h3>
 
     <!-- Mode Switch -->
-    <div style="margin-bottom: 20px; display: flex; gap: 8px; flex-wrap: wrap;">
+    <div style="margin-bottom: 20px; display: flex; gap: 6px; flex-wrap: wrap; align-items: stretch;">
         <label class="mode-btn">
             <input type="radio" name="mode" value="new" checked onchange="toggleMode()">
             <span>Single Entry</span>
