--- a/admin_css.html
+++ b/admin_css.html
@@ -44,14 +44,14 @@
         width: 100%;
         height: 48px;
         padding: 0 16px;
-        border: 1px solid #ccc;
+        border: 1px solid var(--md-sys-color-outline, #ccc);
         border-radius: 4px;
-        font-size: 15px;
+        font-size: 16px;
         box-sizing: border-box;
-        transition: all 0.2s;
-        background: #fff;
+        transition: border-color 0.2s, box-shadow 0.2s;
+        background: var(--md-sys-color-surface, #fff);
+        color: var(--md-sys-color-on-surface, #1c1b1f);
         line-height: 46px;
-        /* Center text */
     }
 
     #admin-container textarea {
@@ -66,6 +66,7 @@
         outline: none;
         border-color: var(--md-sys-color-primary, #006c4c);
         border-width: 2px;
+        box-shadow: 0 0 0 3px rgba(0, 108, 76, 0.12);
     }
 
     #admin-container label {
@@ -73,9 +74,9 @@
         display: block;
         margin-bottom: 6px;
         color: var(--md-sys-color-primary, #006c4c);
-        font-size: 12px;
+        font-size: 11px;
         font-weight: 500;
-        letter-spacing: 0.4px;
+        letter-spacing: 0.5px;
         text-transform: uppercase;
     }
 
@@ -145,8 +146,8 @@
     }
 
     #admin-container .btn-tonal {
-        background-color: #dbece4;
-        color: #004d40;
+        background-color: var(--md-sys-color-secondary-container, #dbece4);
+        color: var(--md-sys-color-on-secondary-container, #004d40);
     }
 
     #admin-container .icon-btn {
@@ -167,8 +168,9 @@
     #admin-container .mode-btn {
         display: flex;
         align-items: center;
+        justify-content: center;
         cursor: pointer;
-        padding: 6px 14px;
+        padding: 8px 16px;
         border-radius: 20px;
         border: 1px solid #ccc;
         font-size: 13px;
@@ -176,6 +178,10 @@
         color: #555;
         background: #fff;
         user-select: none;
+        white-space: nowrap;
+        flex: 1 1 auto;
+        min-width: 0;
+        text-align: center;
     }
 
     #admin-container .mode-btn input {
@@ -186,6 +192,7 @@
         background-color: #dbece4;
         color: #004d40;
         border-color: #006c4c;
+        font-weight: 700;
     }
 
     #admin-container .mode-btn.delete-mode:has(input:checked) {
@@ -288,5 +295,100 @@
     .format-row:hover {
         background-color: #f5f5f5;
         border-color: #ccc;
+    }
+
+    /* ============================================
+       MOBILE RESPONSIVE STYLES
+       ============================================ */
+    @media (max-width: 600px) {
+
+        #admin-container {
+            padding: 16px 12px;
+            border-radius: 0;
+            box-shadow: none;
+        }
+
+        #admin-container h3 {
+            font-size: 18px;
+            margin-bottom: 20px;
+        }
+
+        /* Mode tabs: 2-up grid on mobile */
+        #admin-container>div:first-of-type {
+            display: grid !important;
+            grid-template-columns: 1fr 1fr 1fr;
+            gap: 6px;
+        }
+
+        #admin-container .mode-btn {
+            padding: 10px 8px;
+            font-size: 12px;
+            border-radius: 12px;
+            flex: unset;
+        }
+
+        /* Prevent iOS from zooming into inputs smaller than 16px */
+        #admin-container input,
+        #admin-container select,
+        #admin-container textarea {
+            font-size: 16px !important;
+            height: 52px;
+        }
+
+        #admin-container textarea {
+            height: auto !important;
+        }
+
+        #admin-container label {
+            font-size: 11px;
+        }
+
+        /* Compact inputs stay readable */
+        #admin-container .compact-input input,
+        #admin-container .compact-input select {
+            height: 44px !important;
+            font-size: 15px !important;
+        }
+
+        /* Collapse 3-column grids to 1 */
+        div[style*="grid-template-columns:1fr 1fr 1fr"],
+        div[style*="grid-template-columns: 1fr 1fr 1fr"] {
+            grid-template-columns: 1fr !important;
+        }
+
+        /* Collapse 2-column grids to 1, except bulk gen var slots */
+        div[style*="grid-template-columns:1fr 1fr"],
+        div[style*="grid-template-columns: 1fr 1fr"] {
+            grid-template-columns: 1fr !important;
+        }
+
+        /* Variation card grid: single column on mobile */
+        #admin-container .variation-grid {
+            grid-template-columns: 1fr 1fr !important;
+        }
+
+        /* Format rows stack better */
+        .format-row {
+            grid-template-columns: auto 1fr !important;
+            grid-template-rows: auto auto;
+        }
+
+        .format-row .md3-input-wrapper:last-child {
+            grid-column: 1 / -1;
+        }
+
+        /* Buttons full-width & larger tap target */
+        #admin-container .btn {
+            padding: 14px 24px;
+            font-size: 15px;
+        }
+    }
+
+    @media (max-width: 400px) {
+
+        /* Very small screens: tabs go 2-col */
+        #admin-container>div:first-of-type {
+            grid-template-columns: 1fr 1fr !important;
+        }
     }
 </style>
