fix(mobile): stack app bar title above tabs, remove debug console logs
css.html:
- @media (max-width: 600px): top app bar becomes flex-column
  so title row and tabs row stack vertically, no wrapping/squeezing
- h1 font 22px -> 16px, nowrap + ellipsis on mobile
- tabs go full-width, column layout (icon above text), 11px font
- sticky top offsets updated for taller mobile header (~92px title+tabs)

index.html:
- removed version string from h1 app bar (was causing two-line wrap)
- removed debug console.log script tag from header
- version footer: 10px, subtle grey only

js.html:
- removed all debug console.log statements (DEBUG MATRIX, prefillOrderForm,
  renderProducts, onClientDataSuccess, applyCategoryColorsVisuals, etc)

--- a/css.html
+++ b/css.html
@@ -883,4 +883,69 @@
     .md3-snackbar.error {
         background-color: #c62828;
     }
+
+    /* ============================================================
+       MOBILE RESPONSIVE — TOP APP BAR STACKS TITLE ABOVE TABS
+       On narrow screens, title sits on its own row, tabs below.
+       ============================================================ */
+    @media (max-width: 600px) {
+
+        .md3-top-app-bar {
+            height: auto;
+            flex-direction: column;
+            align-items: stretch;
+            padding: 0;
+        }
+
+        .md3-top-app-bar__content {
+            padding: 10px 16px;
+            max-width: 100%;
+        }
+
+        /* Compact title — no wrapping */
+        .md3-headline-medium {
+            font-size: 16px;
+            line-height: 20px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+        #header-total {
+            font-size: 16px;
+            margin-left: auto;
+        }
+
+        /* Tabs span full width below the title */
+        .md3-tabs {
+            padding: 0;
+            gap: 0;
+            border-top: 1px solid rgba(255, 255, 255, 0.15);
+        }
+
+        .md3-tab {
+            font-size: 11px;
+            padding: 8px 4px;
+            gap: 4px;
+            flex-direction: column;
+        }
+
+        .md3-tab .material-symbols-outlined {
+            font-size: 20px;
+        }
+
+        /* Sticky top offsets: title (~40px) + tabs (~52px) = 92px */
+        .category-details > summary,
+        .category-details[open] > summary {
+            top: 92px;
+        }
+
+        .product-group-details > summary {
+            top: 140px;
+        }
+
+        .md3-container {
+            padding: 8px;
+        }
+    }
 </style>
