--- a/css.html
+++ b/css.html
@@ -884,7 +884,17 @@
         background-color: #c62828;
     }
 
-    /* ============================================================
+    
+    /* Version tag in header title */
+    .version-tag {
+        font-size: 10px;
+        font-weight: 400;
+        opacity: 0.65;
+        letter-spacing: 0.3px;
+        vertical-align: middle;
+        margin-left: 4px;
+    }
+/* ============================================================
        MOBILE RESPONSIVE — TOP APP BAR STACKS TITLE ABOVE TABS
        On narrow screens, title sits on its own row, tabs below.
        ============================================================ */
