--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
   <!-- App Bar -->
   <header class="md3-top-app-bar">
     <div class="md3-top-app-bar__content">
-      <h1 class="md3-headline-medium">Order Form</h1>
+      <h1 class="md3-headline-medium">Order Form <span class="version-tag">
+          <?= version ?>
+        </span></h1>
       <div id="header-total" class="md3-title-large" style="font-weight: bold;">Total: $0.00</div>
     </div>
     <!-- Navigation Tabs -->
