--- a/admin_form.html
+++ b/admin_form.html
@@ -186,9 +186,15 @@
             <textarea id="bulkVar2List" style="display:none;"></textarea>
 
             <!-- Global Price -->
-            <div class="md3-input-wrapper" style="margin-bottom: 16px;">
-                <label>Base Price ($) - Applied to formats below</label>
-                <input type="number" id="masterPrice" step="0.01" placeholder="0.00">
+            <div style="display:grid; grid-template-columns:1fr 1fr; gap:12px; margin-bottom:16px;">
+                <div class="md3-input-wrapper" style="margin-bottom:0;">
+                    <label>Base Price ($)</label>
+                    <input type="number" id="masterPrice" step="0.01" placeholder="0.00">
+                </div>
+                <div class="md3-input-wrapper" style="margin-bottom:0;">
+                    <label>Sale Price ($) <span style="font-size:10px; opacity:0.6;">(optional)</span></label>
+                    <input type="number" id="masterSalePrice" step="0.01" placeholder="Leave blank = no sale">
+                </div>
             </div>
 
             <!-- Generate Formats -->
